launchpad-buildd (210) UNRELEASED; urgency=medium

  * Stop building with dpkg-deb -Zgzip; we no longer need to install on
    lucid.
  * Make more loop device nodes available in LXD containers (LP: #1963706).
  * Drop pre-Python-3.6 code using pyupgrade.
  * Fix gathering the output of charm recipe builds that use --build-path.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 28 Feb 2022 11:27:20 +0000

launchpad-buildd (209) bionic; urgency=medium

  * Upgrade charm to bionic and Python 3.
  * Remove Python 2 support.
  * Unversion python-debian requirement, since the minimum version required
    was very old (pre-xenial) and the version of the packaged python-debian
    confuses modern pip/setuptools (see
    https://bugs.launchpad.net/bugs/1926870).
  * Depend on dnsmasq-base.  The LXD backend needs this, but it's no longer
    in cloud images as of focal.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 21 Feb 2022 17:11:33 +0000

launchpad-buildd (208) bionic; urgency=medium

  [ Jürgen Gmach ]
  * Adjust updated command line option for the CI runner.
  * Publish documentation on Read the Docs. 

  [ Colin Watson ]
  * Rename BUILDD_SLAVE_CONFIG environment variable to BUILDD_CONFIG.

 -- Jürgen Gmach <juergen.gmach@canonical.com>  Wed, 09 Feb 2022 13:52:46 +0000

launchpad-buildd (207) bionic; urgency=medium

  * Return results from individual CI jobs.
  * Support CI pipeline stages with multiple jobs.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 03 Feb 2022 10:40:58 +0000

launchpad-buildd (206) bionic; urgency=medium

  * Fix flake8 violations.
  * Refactor extra status handling to be common to all build types.
  * Fix handling of empty output in Backend.find.
  * Add CI job support.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 11 Jan 2022 16:26:40 +0000

launchpad-buildd (205) bionic; urgency=medium

  * Ignore NotAutomatic flag for -proposed and -backports (LP: #1016776).
  * Use brz-build-daily-recipe rather than "bzr -Derror dailydeb" if the