@@ -5,6 +5,7 @@ bin/in-target				usr/share/launchpad-buildd/bin
 bin/lpbuildd-git-proxy			usr/share/launchpad-buildd/bin
 bin/sbuild-package			usr/share/launchpad-buildd/bin
 buildd-genconfig			usr/share/launchpad-buildd
+debian/launchpad-buildd-generator	lib/systemd/system-generators
 debian/upgrade-config			usr/share/launchpad-buildd
 default/launchpad-buildd 		etc/default
 sbuildrc				usr/share/launchpad-buildd
